--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
-<!--
-To change this template use Tools | Templates.
--->
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
     <head>
         <title></title>
-        <link rel="stylesheet" href="../css/w3.css"/>
+        <link rel="stylesheet" href="./css/w3.css"/>
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">        
     </head>
     <body>        
@@ -18,13 +14,13 @@ To change this template use Tools | Templates.
                 <span>Search <input style="color: #000000"/></span>
             </nav>            
         </header>
-        <img src="../images/newgodigiologo.png" width="100px"/>
+        <img src="./images/newgodigiologo.png" width="100px"/>
         <section class="w3-row-padding">
             <div class="w3-half">
                 <div id="profile" class="w3-card-4">
                     <h1>Profile for <span class="name"></span></h1>
                     <div class="w3-img">
-                        <img id="profileimg" src="../images/profile-icon.png"/>
+                        <img id="profileimg" src="./images/profile-icon.png"/>
                     </div>
                     <div>
                         Fans: <span class="fancount"></span>  Fan of: <span class="fanofcount"></span>  Posts: <span class="postcount"></span>
@@ -35,7 +31,7 @@ To change this template use Tools | Templates.
                     <div id="fanlist" class="w3-row-padding">
                         <div id="fantemplate" class="w3-col m3 s6" style="display:none">
                             <a href="">
-                                <img src="../images/100x100.jpg" width="110" height="90"/>
+                                <img src="./images/100x100.jpg" width="110" height="90"/>
                             </a>
                             <div class="desc"></div>
                         </div>                        
@@ -46,7 +42,7 @@ To change this template use Tools | Templates.
                     <div id="fanoflist" class="w3-row-padding">
                         <div id="fanoftemplate" class="w3-col m3 s6" style="display:none">
                             <a href="">
-                                <img src="../images/100x100.jpg" width="110" height="90"/>
+                                <img src="./images/100x100.jpg" width="110" height="90"/>
                             </a>
                             <div class="desc"></div>
                         </div>                        
@@ -78,7 +74,7 @@ To change this template use Tools | Templates.
                     <div class="w3-card" id="post_template">
                         <div class="w3-row">
                             <div class="w3-third">
-                                <img src="../images/100x100.jpg" class="w3-circle"/>
+                                <img src="./images/100x100.jpg" class="w3-circle"/>
                             </div>
                             <div>
                                 This is my message
@@ -120,7 +116,7 @@ To change this template use Tools | Templates.
         </section>
         <footer>
         </footer>
-        <script src="../js/jquery.js"></script>
+        <script src="./js/jquery.js"></script>
         <script src="./model.js"></script>
         <script src="./controller.js"></script>
     </body>
