Cleared fields after registration

--- a/register.html
+++ b/register.html
@@ -39,6 +39,7 @@ To change this template use Tools | Templates.
         </div>  
         <script src="./js/jquery.js"></script>
         <script src="./js/form2json.js"></script>
+        <script src="./js/clearForm.js"></script>
         <script src="./controllers/controllers.js"></script>
         <script src="register.js"></script>
     </body>
