--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             <nav class="w3-topnav w3-black">
                 <a href="#">Home</a>
                 <a href="#">Post</a>
-                <a href="#" id="fantoggle">Fan</a>
                 <span>Search <input style="color: #000000"/></span>
+                <a href="#" id="fantoggle" style="display:none"></a>
             </nav>            
         </header>
         <img src="./images/newgodigiologo.png" width="100px"/>
