--- a/index.html
+++ b/index.html
@@ -71,6 +71,48 @@
                 </div>
                 <div id="timeline" class="w3-card-4">                    
                     <h1>Timeline</h1>                                      
+                    <div class="w3-card w3-row" id="post_template">                        
+                        <div class="w3-third">
+                            <img src="./images/100x100.jpg" class="w3-circle"/>
+                        </div>
+                        <div>
+                            This is my message
+                        </div>
+                        <nav class="w3-topnav">
+                            <a href="#"><i class="fa fa-heart"></i></a><span id="likecount">0</span>
+                            <a href="#"><i class="fa fa-retweet"></i></a><span id="sharecount">0</span>
+                            <a href="#"><i class="fa fa-comment"></i></a><span id="commentcount">0</span>                                
+                        </nav>                                    
+                        <div class="w3-container">
+                            <div class="w3-card w3-row">
+                                <div class="w3-third">
+                                    <img src="./images/100x100.jpg" class="w3-circle"/>
+                                </div>
+                                <div>
+                                    First Comment
+                                </div>
+                                <nav class="w3-topnav">
+                                    <a href="#"><i class="fa fa-heart"></i></a><span id="likecount">0</span>
+                                    <a href="#"><i class="fa fa-retweet"></i></a><span id="sharecount">0</span>
+                                    <a href="#"><i class="fa fa-comment"></i></a><span id="commentcount">0</span>                                
+                                </nav>            
+                            </div>
+                            <div class="w3-card w3-row">
+                                <div class="w3-third">
+                                    <img src="./images/100x100.jpg" class="w3-circle"/>
+                                    <p>Test User 1</p>
+                                </div>
+                                <div>
+                                    Second Comment
+                                </div>
+                                <nav class="w3-topnav">
+                                    <a href="#"><i class="fa fa-heart"></i></a><span id="likecount">0</span>
+                                    <a href="#"><i class="fa fa-retweet"></i></a><span id="sharecount">0</span>
+                                    <a href="#"><i class="fa fa-comment"></i></a><span id="commentcount">0</span>                                
+                                </nav>            
+                            </div>
+                        </div>
+                    </div>
                     <div class="w3-card" id="post_template">
                         <div class="w3-row">
                             <div class="w3-third">
@@ -80,12 +122,19 @@
                                 This is my message
                             </div>
                             <nav class="w3-topnav">
-                                <a href="#"><i class="fa fa-heart"></i></a><span>0</span>
-                                <a href="#"><i class="fa fa-retweet"></i></a><span>0</span>
-                                <a href="#"><i class="fa fa-comment"></i></a><span>0</span>                                
+                                <a href="#"><i class="fa fa-heart"></i></a><span id="likecount">0</span>
+                                <a href="#"><i class="fa fa-retweet"></i></a><span id="sharecount">0</span>
+                                <a href="#"><i class="fa fa-comment"></i></a><span id="commentcount">0</span>                                
                             </nav>            
-                        </div>                        
+                        </div>
+                        <div class="w3-row w3-card">
+                            <h1>Comments</h1>
+                            <div class="w3-container w3-row" id="comment_template">
+                                <p>First comment</p>
+                            </div>
+                        </div>
                     </div>
+
                 </div>
                 <div className="col-xs-9">
                     <p>{this.props.post.text}</p>
