--- a/index.html
+++ b/index.html
@@ -76,12 +76,13 @@
                             <img src="./images/100x100.jpg" class="w3-circle"/>
                         </div>
                         <div>
-                            This is my message
+                            This is my first message
                         </div>
                         <nav class="w3-topnav">
-                            <a href="#"><i class="fa fa-heart"></i></a><span id="likecount">0</span>
+                            <a href="#"><i class="fa fa-heart-o"></i></a><span id="likecount">0</span>
                             <a href="#"><i class="fa fa-retweet"></i></a><span id="sharecount">0</span>
                             <a href="#"><i class="fa fa-comment"></i></a><span id="commentcount">0</span>                                
+                            <a href="#"><i class="fa fa-trash"></i></a>
                         </nav>                                    
                         <div class="w3-container">
                             <div class="w3-card w3-row">
@@ -119,7 +120,7 @@
                                 <img src="./images/100x100.jpg" class="w3-circle"/>
                             </div>
                             <div>
-                                This is my message
+                                This is my second message
                             </div>
                             <nav class="w3-topnav">
                                 <a href="#"><i class="fa fa-heart"></i></a><span id="likecount">0</span>
@@ -127,40 +128,8 @@
                                 <a href="#"><i class="fa fa-comment"></i></a><span id="commentcount">0</span>                                
                             </nav>            
                         </div>
-                        <div class="w3-row w3-card">
-                            <h1>Comments</h1>
-                            <div class="w3-container w3-row" id="comment_template">
-                                <p>First comment</p>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-                <div className="col-xs-9">
-                    <p>{this.props.post.text}</p>
-                    <ul className="list-inline">
-                        <li><a href="#">2 Days Ago</a></li>
-                        <li><a href="#"><i className="glyphicon glyphicon-comment" ></i> {this.state.commentcount} Comments</a></li>
-                        <li><a href="#"><i className="glyphicon glyphicon-share" ></i> 34 Shares</a></li>
-                    </ul>
-                    <form onSubmit = {this.handleSubmit}>
-                        <div className="input-group">
-                            <div className="input-group-btn">
-                                <button className="btn btn-default">Like</button>
-                                <button className="btn btn-default"><i className="glyphicon glyphicon-share"></i></button>
-                                <button className="btn btn-default" onClick={this.deletePost.bind(null, this.props.post)}>
-                                    <i className="glyphicon glyphicon-trash"></i>
-                                </button>
-                            </div>
-                            <input type="text" className="form-control" placeholder="Add a comment.." ref="comment"/>
-                        </div>
-                    </form>
-                    <div className="w3-container">
-                        <Comments comments={this.state.comments}/>
                     </div>
                 </div>
-                <div className="col-xs-3"></div>
-
             </div>
         </section>
         <footer>
