--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         </header>
         <img src="./images/newgodigiologo.png" width="100px"/>
         <section class="w3-row-padding">
-            <div class="w3-half">
+            <div class="w3-third">
                 <div id="profile" class="w3-card-4">
                     <h1>Profile for <span class="name"></span></h1>
                     <div class="w3-img">
-                        <img id="profileimg" src="./images/profile-icon.png"/>
+                        <img id="profileimg" src="./images/profile-icon.png" width="200"/>
                     </div>
                     <div>
                         Fans: <span class="fancount"></span>  Fan of: <span class="fanofcount"></span>  Posts: <span class="postcount"></span>
