--- a/welcome.html
+++ b/welcome.html
@@ -19,10 +19,7 @@ To change this template use Tools | Templates.
         </header>
         <img src="./images/newgodigiologo.png" width="100px"/>
         <h1>Welcome To Godigio Fanhub</h1>
-        <script src="./js/jquery.js"></script>
-        <script src="./js/form2json.js"></script>
-        <script src="./js/clearForm.js"></script>
-        <script src="./controllers/controllers.js"></script>
-        <script src="login.js"></script>
+        <h1><a href="login.html">Login</a></h1>
+        <h1><a href="register.html">Register</a></h1>
     </body>
 </html>
