added fan count

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div id="fanof" class="w3-card-4">
-                    <h1><span class="name"></span> Is A Fan Of</h1>
+                    <h1><span class="name"></span> Is A Fan Of <span class="fanofcount"></span> people</h1>
                     <div id="fanoflist" class="w3-row-padding">
                         <div id="fanoftemplate" class="w3-col m3 s6" style="display:none">
                             <a href="">
