--- a/editprofile.html
+++ b/editprofile.html
@@ -33,10 +33,12 @@ To change this template use Tools | Templates.
                     <img src="./images/profile-icon.png" alt="Prevew Image" id="preview-img" width="100px" height="100px"/>
                 </a>                
             </div>
+            <input type="hidden" name="userid" id="userid"/>
             <button type="button" id="btnSubmit" class="w3-btn w3-right w3-theme">Submit</button>
         </div>  
-        <script type="javascript" src="./js/jquery.js"></script>
-        <script type="javascript" src="./js/fileupload.js"></script>
-        <script type="javascript" src="./controllers/controllers.js"></script>        
+        <script type="text/javascript" src="./js/jquery.js"></script>
+        <script type="text/javascript" src="editprofile.js"></script>
+        <script type="text/javascript" src="./js/fileupload.js"></script>
+        <script type="text/javascript" src="./controllers/controllers.js"></script>        
     </body>
 </html>
