--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                     <h3>Profile for <span class="name"></span></h3>
                     <div class="w3-row">
                         <div class="w3-img w3-half">
-                            <img id="profileimg" src="./images/profile-icon.png" alt="user profile image" width="200px"/>
+                            <img class="profileimg" src="./images/profile-icon.png" alt="user profile image" width="180px"/>
                         </div>
                         <div class="w3-half">
-                            <div>DOB : </div>
-                            <div>Gender : </div>
-                            <div>Marital : </div>
-                            <div>Location : </div>
+                            <div>DOB : <span id="dob"></span></div>
+                            <div>Gender : <span id="gender"></span></div>
+                            <div>Marital : <span id="marital"></span></div>
+                            <div>Location : <span  id="location"></span></div>
                             <a href="editprofile.html" class="w3-btn">Edit Profile</a>
                         </div>
                     </div>
