Fixed bug in getUsersPosts

--- a/editprofile.html
+++ b/editprofile.html
@@ -6,9 +6,9 @@ To change this template use Tools | Templates.
     <head>
         <title></title>
         <link rel="stylesheet" href="./css/w3.css"/>
-        <script type="text/javascript" src="http://cdn.jsdelivr.net/webshim/1.12.4/extras/modernizr-custom.js"></script>
+        <script type="text/javascript" src="//cdn.jsdelivr.net/webshim/1.12.4/extras/modernizr-custom.js"></script>
         <!-- polyfiller file to detect and load polyfills -->
-        <script type="text/javascript" src="http://cdn.jsdelivr.net/webshim/1.12.4/polyfiller.js"></script>
+        <script type="text/javascript" src="//cdn.jsdelivr.net/webshim/1.12.4/polyfiller.js"></script>
         <script type="text/javascript">
             webshims.setOptions('waitReady', false);
             webshims.setOptions('forms-ext', {types: 'date'});
