--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div id="fanoflist" class="w3-row-padding">
                         <div id="fanoftemplate" class="w3-col m3 s6" style="display:none">
                             <a href="">
-                                <img src="./images/100x100.jpg" alt="fanof profile image" width="110" height="90"/>
+                                <img src="./images/100x100.jpg" alt="fanof profile image" width="110px" height="90px"/>
                             </a>
                             <div class="name"></div>
                         </div>                        
@@ -135,7 +135,9 @@
                             </div>
                             <div class="message">
                                 This is my second message
-                                <div class="postimage"></div>
+                            </div>
+                            <div>
+                                <img src="./images/100x100.jpg" alt="post image" class="postimage"/>
                             </div>
                             <nav class="w3-topnav">
                                 <a href="#"><i class="fa fa-heart"></i></a><span id="likecount">0</span>
